# julia

./: CMakeLists.txt  README.md  julia.kdev4  main.cpp  packages.config
shaders/: fragment.glsl  julia.glsl  mandelbrot.glsl  tri.glsl
